--- a/Assets/Scripts/Tests_EditMode/Tests.EditMode.asmdef
+++ b/Assets/Scripts/Tests_EditMode/Tests.EditMode.asmdef
@@ -2,9 +2,9 @@
     "name": "Tests.EditMode",
     "rootNamespace": "",
     "references": [
+        "Core",
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "Main"
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [
         "Editor"
