--- a/Assets/Scripts/UI Implementation/UIs.asmdef
+++ b/Assets/Scripts/UI Implementation/UIs.asmdef
@@ -1,9 +1,10 @@
 {
-    "name": "Main",
+    "name": "UIs",
     "rootNamespace": "",
     "references": [
         "GUID:854602359696a764bb2257d84b4c507f",
-        "GUID:18286da2651ffe04eb165cbe3abb437e"
+        "GUID:18286da2651ffe04eb165cbe3abb437e",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
