--- a/Assets/Scripts/Main/Main.asmdef
+++ b/Assets/Scripts/Main/Main.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "Main.UIs",
+    "name": "Main",
     "rootNamespace": "",
     "references": [
-        "GUID:854602359696a764bb2257d84b4c507f"
+        "GUID:854602359696a764bb2257d84b4c507f",
+        "GUID:18286da2651ffe04eb165cbe3abb437e",
+        "GUID:ea6bea521c5d61549b2ccecac66484e9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
