--- a/Assets/Scripts/Main/Main.asmdef
+++ b/Assets/Scripts/Main/Main.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:854602359696a764bb2257d84b4c507f",
         "GUID:18286da2651ffe04eb165cbe3abb437e",
-        "GUID:ea6bea521c5d61549b2ccecac66484e9"
+        "GUID:ea6bea521c5d61549b2ccecac66484e9",
+        "GUID:ee8fd258432778047abfdb16a0bc9077"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
